<resources>
    <string name="title">Let\'s find you a movie</string>
    <string name="kinopoisk">Kinopoisk (Russian: Кинопоиск, a portmanteau of "cinema" and "search") is a Russian online database of information related to films, TV shows including cast, production team, biographies, plot summaries, ratings, and reviews. Since 2018 (as КиноПоиск HD) also a subscription video on demand streaming service with several thousand films, TV series, cartoons and including premieres and exclusive ones, has also been available</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <string name="subscribe">Subscription rates</string>
    <string name="subscribe1">Family</string>
    <string name="subscribe2">Duo</string>
    <string name="subscribe3">Solo</string>
    <string name="title0">KinoPoisk</string>
    <string name="app_name">kino</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</string>


</resources>