<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/banner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="36dp"
            android:background="@color/black"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textFontWeight="@integer/material_motion_duration_medium_2"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner" />

        <ImageButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="168dp"
            android:adjustViewBounds="true"
            android:src="@drawable/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="title, startButton"
            android:orientation="vertical"
            app:barrierDirection="bottom"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/about"
            android:layout_width="355dp"
            android:layout_height="166dp"
            android:layout_marginTop="40dp"
            android:text="@string/kinopoisk"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startButton"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            android:text="@string/subscribe"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/about"
            />


        <TextView
            android:id="@+id/subs1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe1"
            android:textColor="@color/white"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/subs2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe2"
            android:textColor="@color/white"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/subs3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe3"
            android:textColor="@color/white"
            android:textSize="20dp"
            />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/subscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="subs1, subs2, subs3"
            app:flow_wrapMode="chain"
            app:layout_constraintTop_toBottomOf="@id/label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:flow_horizontalBias="0"
            android:outlineSpotShadowColor="@color/white"
            android:outlineAmbientShadowColor="@color/white"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>