<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/black"
tools:context=".presentation.MainFragment">

<ImageView
    android:id="@+id/banner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:contentDescription="@string/todo"
    android:src="@drawable/banner"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/title"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="124dp"
android:layout_marginTop="204dp"
android:background="@color/black"
android:text="@string/title"
android:textColor="@color/white"
android:textFontWeight="@integer/material_motion_duration_medium_2"
android:textStyle="italic"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/banner" />

<ImageButton
android:id="@+id/startButton"
android:layout_width="wrap_content"
android:layout_height="70dp"
android:layout_marginTop="80dp"
android:layout_marginEnd="64dp"
android:adjustViewBounds="true"
android:contentDescription="@string/title0"
android:src="@drawable/start"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@+id/banner" />

<Button
android:id="@+id/loginButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
    android:text="@string/log_in"
    android:textColor="@color/white"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent" />

<TextView
android:id="@+id/about"
android:layout_width="327dp"
android:layout_height="53dp"
android:layout_marginTop="40dp"
android:text="@string/kinopoisk"
android:textColor="@color/white"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/startButton"
app:layout_constraintVertical_bias="0.316"
tools:ignore="MissingConstraints" />

<TextView
android:id="@+id/label"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginEnd="92dp"
android:textColor="@color/black"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintEnd_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/about" />


<TextView
android:id="@+id/mainTitle"
android:layout_width="113dp"
android:layout_height="39dp"
android:layout_marginTop="92dp"
android:layout_marginEnd="68dp"
android:text="@string/title0"
android:textColor="@color/white"
android:textSize="24sp"
android:textStyle="bold"
app:flow_wrapMode="aligned"
app:layout_constraintEnd_toStartOf="@+id/startButton"
app:layout_constraintTop_toBottomOf="@id/banner" />


</androidx.constraintlayout.widget.ConstraintLayout>